--- a/package.json
+++ b/package.json
@@ -6,15 +6,25 @@
     "start": "next start"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^2.6.2",
+    "@prisma/client": "^4.15.0",
+    "@radix-ui/colors": "^0.1.8",
+    "@radix-ui/react-dropdown-menu": "^2.0.5",
+    "@radix-ui/react-icons": "^1.3.0",
     "jotai": "^1.4.0",
+    "luxon": "^3.3.0",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.9.0"
   },
   "devDependencies": {
+    "@types/node": "^20.3.1",
     "autoprefixer": "^10.2.6",
     "postcss": "^8.3.5",
-    "tailwindcss": "^2.2.4"
+    "prisma": "^4.15.0",
+    "tailwindcss": "^2.2.4",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.3"
   }
 }
