--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "@radix-ui/colors": "^0.1.8",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-icons": "^1.3.0",
+    "axios": "^1.4.0",
     "jotai": "^1.4.0",
     "luxon": "^3.3.0",
     "next": "latest",
     "react": "^17.0.2",
+    "react-datepicker": "^4.13.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.9.0"
   },
