--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "export SET NODE_OPTIONS=--openssl-legacy-provider && next build",
+    "build": "export SET NODE_OPTIONS=--openssl-legacy-provider && npx prisma generate && next build",
     "start": "next start"
   },
   "dependencies": {
